--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "electron-squirrel-startup": "^1.0.1",
     "lucide-react": "^0.563.0",
     "react-router-dom": "^7.13.0",
+    "recharts": "^3.7.0",
     "sqlite3": "^5.1.7",
     "update-electron-app": "^3.1.2"
   }
