--- a/package.json
+++ b/package.json
@@ -27,18 +27,19 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.11.1",
     "@electron-forge/plugin-fuses": "^7.11.1",
     "@electron-forge/plugin-vite": "^7.11.1",
+    "@electron-forge/publisher-github": "^7.11.1",
     "@electron/fuses": "^1.8.0",
     "@rollup/plugin-commonjs": "^29.0.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@vitejs/plugin-react": "^5.1.3",
     "autoprefixer": "^10.4.24",
     "electron": "^40.2.1",
-    "electron-rebuild": "^3.2.9",
+    "electron-rebuild": "^2.0.3",
     "postcss": "^8.5.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "tailwindcss": "^4.1.18",
-    "vite": "^5.4.21"
+    "vite": "^7.3.1"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.1",
@@ -46,6 +47,6 @@
     "lucide-react": "^0.563.0",
     "react-router-dom": "^7.13.0",
     "recharts": "^3.7.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.0.2"
   }
 }
