--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "poultry-management",
-  "productName": "poultry-management",
+  "productName": "Poultry Management System",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "A comprehensive desktop application for managing poultry farm operations.",
   "main": ".vite/build/main.js",
   "private": true,
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\"",
-    "postinstall": "electron-rebuild -f -w sqlite3"
+    "publish": "electron-forge publish"
   },
   "keywords": [],
   "author": {
@@ -35,7 +33,7 @@
     "@vitejs/plugin-react": "^5.1.3",
     "autoprefixer": "^10.4.24",
     "electron": "^40.2.1",
-    "electron-rebuild": "^2.0.3",
+    "electron-rebuild": "^3.2.9",
     "postcss": "^8.5.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
@@ -43,11 +41,9 @@
     "vite": "^7.3.1"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.1",
-    "electron-updater": "^6.7.3",
     "lucide-react": "^0.563.0",
     "react-router-dom": "^7.13.0",
     "recharts": "^3.7.0",
-    "sqlite3": "^5.0.2"
+    "sql.js": "^1.14.0"
   }
 }
